# valid

./: .gitignore  Cargo.toml  Dockerfile  README.md  valid.toml
.claude/skills/valid-check/: SKILL.md
.claude/skills/valid-contract/: SKILL.md
.claude/skills/valid-model/: SKILL.md
.claude/skills/valid-review/: SKILL.md
.claude/worktrees/agent-a039e25e/: Cargo.toml  README.md
.claude/worktrees/rebase-repro-manifest/: .gitignore  valid.toml
.github/workflows/: benchmark.yml  ci-workflow-templates.yml  ci.yml  release.yml  template-cargo-valid-inspect-check.yml  template-cargo-valid-testgen.yml  template-valid-conformance.yml  template-valid-doc-check.yml
benchmarks/: README.md
benchmarks/baselines/: baseline-5ca7bc14d18e7965.json  baseline-9a2c0fdf345c4ae2.json
benchmarks/registries/: enterprise_scale_registry.rs  iam_enterprise_registry.rs
docs/: README.md  artifacts.md  composition.md  graph-and-review.md  install.md  project-organization.md  quickstart.md  testgen-and-handoff.md  testgen-strategies.md
docs/ai/: authoring-guide.md  candidate-comparison-workflow.md  common-pitfalls.md  conformance-workflow.md  curriculum.md  examples-curriculum.md  migration-guide.md  model-authoring-best-practices.md  modeling-checklist.md  requirement-refinement-workflow.md  review-workflow.md
docs/ci/: README.md
docs/dsl/: README.md  fizzbuzz-validation-report.md  language-evolution.md  language-spec.md  parameterized-action-roadmap.md
docs/mcp/: catalog.docs.json  catalog.examples.json  claude_code.mcp.json  claude_desktop_config.json  codex_config.toml
docs/rdd/: 00_integrated_rdd.md  README.md  requirements.md
docs/rdd/01_overview/: README.md  governance_and_operations.md  overview_and_scope.md
docs/rdd/02_requirements/: README.md  functional_requirements.md  non_functional_requirements.md
docs/rdd/03_architecture/: README.md  architecture.md
docs/rdd/04_domain/: README.md  business_logic_and_data_model.md  domain_audit_and_read_models.md  domain_business_rules.md  domain_entities_and_aggregates.md  domain_language_and_contexts.md  domain_persistence_and_lifecycle.md
docs/rdd/05_interfaces/: README.md  interfaces_cli_api_ci.md
docs/rdd/06_research/: README.md  research_review.md
docs/rdd/07_planning/: README.md  feature_breakdown.md  kpi_roadmap_risks.md
docs/rdd/08_specs/: README.md  ai_solver_selfcheck_specs.md  (+5 more)
examples/: README.md  compose_helper_registry.rs  conformance_harness.rs  cover_review.valid  deadlock_enablement_registry.rs  enterprise_scale_registry.rs  fizzbuzz.rs  handoff_testgen_registry.rs  iam_enterprise_registry.rs  iam_like_authz.rs  iam_policy_diff.rs  iam_transition_registry.rs  password_policy.rs  practical_use_cases_registry.rs  run_practical_suite.sh  saas_entitlements.rs  saas_multi_tenant_registry.rs  scenario_focus.valid  tenant_relation_registry.rs  train_fare.rs  valid_models.rs
examples/models/: multi_property.valid  parse_error.valid
examples/property_suites_project/: Cargo.toml  README.md  valid.toml
examples/solvers/: mock_cvc5_solver.sh
examples/use_cases/: entitlements.rs
scripts/: benchmark-suite.sh
scripts/ci/: coverage_gate.py  template_conformance.sh  template_doc_check.sh  template_inspect_check.sh  template_testgen.sh
src/: bundled_models.rs  lib.rs  project.rs  registry.rs
src/api/: mod.rs
src/contract/: mod.rs
src/coverage/: mod.rs
src/engine/: explicit.rs  mod.rs
src/evidence/: mod.rs
src/frontend/: ir_lowering.rs  mod.rs  resolver.rs  typecheck.rs
src/ir/: action.rs  expr.rs  mod.rs  model.rs
src/kernel/: eval.rs  guard.rs  mod.rs  replay.rs  transition.rs
src/modeling/: mod.rs
src/native/: authz.rs  demo.rs  entitlements.rs  fare.rs  mod.rs
src/orchestrator/: mod.rs
src/selfcheck/: mod.rs
src/solver/: mod.rs  smt.rs
src/support/: artifact.rs  diagnostics.rs  io.rs  mod.rs
src/testgen/: mod.rs
src/use_cases/: mod.rs
tests/: capability_examples.rs  claude_skills.rs  e2e_cargo_valid.rs  e2e_ci_templates.rs  e2e_cli.rs  e2e_domain_models.rs  e2e_enterprise_scale.rs  e2e_mcp.rs  e2e_practical_suite.rs  e2e_real_solver.rs  e2e_relation_map_cvc5.rs  e2e_relation_map_varisat.rs  e2e_valid_mcp.rs  realistic_models.rs  ui_macro_diagnostics.rs
valid/src/: benchmark.rs  bundled_models.rs  lib.rs  project.rs  registry.rs
valid_derive/: Cargo.toml
valid_derive/src/: lib.rs
(+168 files in other folders)
