[package]
name = "valid"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["valid_derive"]

[lib]
name = "valid"
path = "valid/src/lib.rs"

[[bin]]
name = "valid"
path = "valid/src/bin/valid.rs"

[[bin]]
name = "cargo-valid"
path = "valid/src/bin/cargo-valid.rs"

[dependencies]
valid_derive = { path = "valid_derive" }
