[package]
name = "valid"
version = "0.1.0"
edition = "2021"

[features]
default = []
varisat-backend = ["dep:varisat"]

[workspace]
members = ["packages/valid_derive"]

[lib]
name = "valid"
path = "packages/valid/src/lib.rs"

[[bin]]
name = "valid"
path = "packages/valid/src/bin/valid.rs"

[[bin]]
name = "cargo-valid"
path = "packages/valid/src/bin/cargo-valid.rs"

[[example]]
name = "practical_use_cases_registry"
path = "benchmarks/registries/practical_use_cases_registry.rs"

[[example]]
name = "enterprise_scale_registry"
path = "benchmarks/registries/enterprise_scale_registry.rs"

[[example]]
name = "iam_enterprise_registry"
path = "benchmarks/registries/iam_enterprise_registry.rs"

[dependencies]
valid_derive = { path = "packages/valid_derive" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
varisat = { version = "0.2", optional = true }
